Resolve git discussions, changed style of cards - Card content is now consistent among all pages (font, icons) - Removed commented out code - Renamed html ids to not have overlapping css - Front-end calculation of age from dob is now displayed instead of dob - Imported tripCards.css to admin page
#story[580] #fix #chore #pair[rch141, wwa52]

--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -12,7 +12,7 @@
     background-image: linear-gradient(40deg, #5283B7, #007bff);
     font-weight: 900;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.75rem;
     text-align: center;
     padding: .30rem;
     cursor: pointer;
@@ -36,12 +36,6 @@
 #banner {
     height: 30%;
 }
-
-.carousel-inner {
-    width: 400px;
-    height: 266px;
-}
-
 
 .user-card-button {
     margin-bottom: 10px;
