--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,7 +38,7 @@ code {
 }
 
 .card {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 /**
