--- a/public/stylesheets/tripCards.css
+++ b/public/stylesheets/tripCards.css
@@ -1,15 +1,16 @@
-#card {
+#card-trips {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     margin-bottom: 15px;
     border-radius: 0px;
     min-width: 660px;
 }
 
-#inner-card {
-    border: none;
+#inner-card-trips {
+    border:none;
+    border-radius: 0px;
 }
 
-#card-thumbnail-div {
+#card-thumbnail-div-trips {
     background-image: radial-gradient( circle farthest-corner at 12.3% 19.3%,  rgba(85,88,218,1) 0%, rgba(95,209,249,1) 100.2% );
     -webkit-clip-path: polygon(0 0, 100% 0%, 90% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0%, 90% 100%, 0% 100%);
@@ -22,7 +23,7 @@
 
 
 
-#card-thumbnail {
+#card-thumbnail-trips {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     border-radius: .25rem;
     max-height: 150px;
